Feat: blocking site accourding to work hours Chore: some addition in .prettierrc

--- a/popup/index.html
+++ b/popup/index.html
@@ -21,9 +21,8 @@
       </form>
 
       <!-- works hours showcase -->
-      <div id="work-hours">
-        From `10am` to `6pm` <span id="setTimeBtn">Set</span>
-      </div>
+      <div id="work-hours"></div>
+      <span id="setTimeBtn">Set</span>
 
       <!-- dialop to set work hours -->
       <dialog open id="setTime">
